[package]
name = "eth-tx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ethers = "1.0"
ethers-core = "1.0"
ethers-signers = "1.0"
tokio = { version = "1.0", features = ["full"] }
